--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="0;url=/archive/">
-    <title>نظام الأرشفة - جاري التوجيه...</title>
+    <title>مركز الإتصالات الإدارية - جاري التوجيه...</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
@@ -36,7 +36,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>نظام الأرشفة الموحد</h1>
+        <h1>مركز الإتصالات الإدارية</h1>
         <p>جاري التوجيه إلى النظام...</p>
         <p><a href="/archive/">انقر هنا إذا لم يتم التوجيه تلقائياً</a></p>
     </div>
