fix: paths for mdlbeast basePath - logos, manifest, sw.js, icons

--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="0;url=/mdlbeast/">
     <title>MDLBEAST Communications - جاري التوجيه...</title>
-    <link rel="icon" type="image/png" href="/favicon.png">
-    <link rel="apple-touch-icon" href="/apple-icon.jpg">
+    <link rel="icon" type="image/png" href="/mdlbeast/favicon.png">
+    <link rel="apple-touch-icon" href="/mdlbeast/apple-icon.jpg">
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
@@ -43,7 +43,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="/logo.png" alt="MDLBEAST Logo" class="logo">
+        <img src="/mdlbeast/logo.png" alt="MDLBEAST Logo" class="logo">
         <h1>MDLBEAST Communications</h1>
         <p>جاري التوجيه إلى النظام...</p>
         <p><a href="/mdlbeast/">انقر هنا إذا لم يتم التوجيه تلقائياً</a></p>
