--- a/public/clear-cache.html
+++ b/public/clear-cache.html
@@ -154,7 +154,7 @@
         function checkStorage() {
             const token = localStorage.getItem('auth_token') || localStorage.getItem('token');
             const docs = localStorage.getItem('archive_docs');
-            const user = localStorage.getItem('archive_user') || localStorage.getItem('archivx_session_user');
+            const user = localStorage.getItem('archive_user') || localStorage.getItem('mdlbeast_session_user');
             
             document.getElementById('token-status').textContent = token ? 'موجود' : 'فارغ';
             document.getElementById('token-status').className = token ? 'badge warning' : 'badge success';
@@ -174,6 +174,7 @@
                 'refresh_token',
                 'archive_docs',
                 'archive_user',
+                'mdlbeast_session_user',
                 'archivx_session_user',
                 'archive_tenant',
                 'selectedTenantId'
